--- a/style.css
+++ b/style.css
@@ -1,17 +1,35 @@
-.corpo{
-    float: left;
-    display: block;
-    font-family: Arial, Helvetica, sans-serif;
+*{
+    box-sizing: border-box;
+}
+
+body{
+    background-color: rgba(6, 91, 91, 0.357);
+
 
 }
 
+img{
+    padding: 0px;
+    padding-left: 60px;
+    margin: 0px;
+    width: 80%
 
+}
+.corpo{
+    display: block;
+    float: left;
+    max-width: 50%;
+    padding: 30px;
+    padding-right: 40px;
+    padding-bottom: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 
-
+}
 .container{
+    box-shadow: 5px 5px 0px black;
     display: block;
     float: right;
-    max-width: 500px;
+    max-width: 100%;
     margin: 50px;
     padding: 30px;
     padding-right: 40px;
@@ -27,3 +45,5 @@ input{
     box-sizing: border-box;
     margin-bottom: 10px;
 }
+
+
