--- a/style.css
+++ b/style.css
@@ -1,49 +1,102 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Sunflower&display=swap');
+
 *{
     box-sizing: border-box;
 }
 
 body{
-    background-color: rgba(6, 91, 91, 0.357);
-
-
+    background-color: #687DB1;
+    color: #161040;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    
 }
 
 img{
+    display: flex;
+    flex: auto;
     padding: 0px;
     padding-left: 60px;
     margin: 0px;
     width: 80%
 
 }
+
+#titulo{
+    padding: 0px;
+    margin: 0px;
+
+
+}
+
 .corpo{
-    display: block;
+    color: #F2F2F2;
+    display: flex;
+    flex-flow: column wrap;
     float: left;
     max-width: 50%;
     padding: 30px;
-    padding-right: 40px;
-    padding-bottom: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family: 'Rubik', sans-serif;
 }
 .container{
+    max-width: 100vh;
+    height: 90vh;
     box-shadow: 5px 5px 0px black;
-    display: block;
+    display: flex;
+    flex-flow: column wrap;
+    align-content: flex-end;
     float: right;
-    max-width: 100%;
-    margin: 50px;
-    padding: 30px;
-    padding-right: 40px;
-    background-color: aliceblue;
+    margin: 20px;
+    padding: 40px;
+    background-image: linear-gradient(rgb(212, 230, 246),aliceblue,rgb(212, 230, 246));
     border-radius: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Rubik', sans-serif;
+}
+input{
+    background-color: aliceblue;
+    color: #6464A9;
+    text-align: center;
+    font-size: 25px;
+    display: flex;
+    width: 100%;
+    padding: 15px;
+    margin: 10px;
+    box-sizing: border-box;
+    font-weight: bold;
+    text-shadow: 1px 0px rgba(0, 0, 0, 0.300);
+    border: none;
 }
 
-input{
-    display: block;
-    width: 100%;
-    padding: 5px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
+input::placeholder {
+    color: #5a5a73;
+    font-size: 20px;
+    font-family: 'Rubik', sans-serif;
+  }
+
+button{
+    border: none;
+    padding: 20px;
+    margin-top: 5px ;
+    color: rgb(59, 55, 55);
+    background-color: rgba(21, 121, 121, 0.372);
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 10px;
+    font-family: 'Rubik', sans-serif;
+
 }
+
+#resultado{
+    font-size: 18px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: bold;
+
+
+}
+
+
+
+
 
 
